# packages

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis_do.sh  7646d48820c9bd9d  CONTRIBUTING.md  Config.in  MAINTAINERS  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.md  SECURITY.md  breakwithloop  crosscompile  hacktoberfest-accepted  key-build  netdata.patch  pavanwow
.circleci/: Dockerfile  README  config.yml  get_commit_range.sh
.github/: dependabot.yml  formalities.json  issue_template  labeler.yml  llm-review-rules.md  pull_request_template  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: Dockerfile  build_x86_64.yml  check-apk-valid-version.yml  check-autorelease-deprecation.yml  entrypoint.sh  formal.yml  labeler.yml  linter.yml  llm-review.yml  multi-arch-test-build.yml  stale-bot.yml
admin/atop/: Makefile
admin/backuppc/: Makefile
admin/bottom/: Makefile
admin/btop/: Makefile  test.sh
admin/customize/: Makefile
admin/debian-archive-keyring/: Makefile
admin/debootstrap/: Makefile
admin/earlyoom/: Makefile  test.sh
admin/facter/: Makefile
admin/fluent-bit/: Makefile
admin/freeipmi/: Makefile
admin/gkrellmd/: Makefile
admin/htop/: Makefile
admin/iotop/: Makefile
admin/ipmitool/: Config.in  Makefile
admin/luci-app-itus/: Makefile
admin/lynis/: Makefile
ahcpd/: Makefile
alfred/: Config.in  Makefile
amneziawg-tools/: Makefile
babel-pinger/: Makefile
babeld/: Makefile
babels/: Makefile
batctl/: Makefile
batman-adv/: Config.in  Makefile
batmand/: Makefile
bcp38/: Makefile
bird/: Makefile
bird-openwrt/: DOCUMENTATION  LUCI-DOCUMENTATION.md  UCI-DOCUMENTATION.md
bird1/: Makefile
bird2/: Makefile
bmx6/: Makefile
bmx6-luci/: Makefile
bmx7/: Makefile
bmxd/: Makefile
cjdns/: Makefile
files/: nodogsplash.init  olsr.config  olsrd.config  olsrd.init  olsrd.pud.position.conf  quagga  quagga.conf
geoip-shell/: Makefile
hnetd/: Makefile
kmod-amneziawg/: Makefile
lang/: lua-task
libesmtp/: Makefile
libs/: Makefile
libs/libmpdclient/autotools-files/: Makefile.am  config.h.in  configure.ac  libmpdclient.pc.in
luci-app-bcp38/: Makefile
luci-app-bmx6/: Makefile
luci-app-bmx7/: Makefile
luci-app-cjdns/: Makefile
mcast-tools/: Makefile
mcproxy/: Makefile
minimalist-pcproxy/: Makefile
miniupnpd/: Makefile
mrd6/: Makefile
multimedia/omxplayer/files/: CMakeLists.txt  version.h
nat46/: Makefile
ndppd/: Makefile
net/basicstation/src/: CMakeLists.txt
net/cgi-io/src/: CMakeLists.txt  main.c  multipart_parser.c  multipart_parser.h
net/nginx-util/src/: CMakeLists.txt  LICENSE  nginx-ssl-util.cpp  nginx-ssl-util.hpp  nginx-util.cpp  nginx-util.hpp  px5g-openssl.hpp  px5g.cpp  regex-pcre.hpp  test-nginx-util-root.sh  test-nginx-util.sh  test-px5g.sh  ubus-cxx.cpp  ubus-cxx.hpp  uci-cxx.cpp  uci-cxx.hpp
net/nginx-utils/src/: .CMakeLists.txt.kate-swp  .nginx-ssl-util.cpp.kate-swp  CMakeLists.txt  _lan.conf  a.out  common.hpp  crontabs  nginx-create-listen.hpp  nginx-create-listen.hpp.gch  nginx-ssl-util.cpp  nginx-utils-common.hpp  px5g-openssl.hpp  px5g.cpp  regex-pcre.hpp  ubus-cxx.hpp  ubus.hpp
nodogsplash/: Makefile
nodogsplash2/: Makefile
ohybridproxy/: Makefile
olsrd/: Makefile
oonf-dlep-proxy/: Makefile
oonf-dlep-radio/: Makefile
oonf-init-scripts/: Makefile
oonf-olsrd2/: Config.in  Makefile
oui/: LICENSE  README.md  oui.mk  version.mk
oui/oui-rpc-core/src/: CMakeLists.txt  fs.c  helper.h  md5.c  network.c
patches/: 000-fix-format-warnings.patch  000-fix-ipv6-build-failure.patch  000-upstream-afi_t_safi_t.patch  000-upstream-bgp_lock_node.patch  000-upstream-bogus_cond.patch  000-upstream-clock_fix.patch  000-upstream-miss_str.patch  000-upstream-set_null.patch  0001-batman-adv-fix-skb-data-assignment.patch  0001-batman-adv-fix-skb-leak-in-batadv_dat_snoop_incoming.patch  0001-batman-adv-make-batadv_test_bit-return-0-or-1-only.patch  0001-batman-adv-verify-tt-len-does-not-exceed-packet-len.patch  0001-batman-adv_fix_tt_global_entries_flags_update.patch  0001-batman-adv_unify_hash_entry_field_position_in_tt_local_global_entry.patch  0002-batman-adv-Fix-change-mac-address-of-soft-iface.patch  0002-batman-adv-check-for-more-types-of-invalid-IP-addres.patch  0002-batman-adv-only-drop-packets-of-known-wifi-clients.patch  0002-batman-adv_add_sanity_check_when_removing_global_tts.patch  0002-batman-adv_correctly_pass_the_client_flag_on_tt_response.patch  0003-batman-adv-Fix-symmetry-check-route-flapping-in-mult.patch  0003-batman-adv-filter-ARP-packets-with-invalid-MAC-addre.patch  0003-batman-adv-fix-race-condition-in-TT-full-table-repla.patch  0003-batman-adv-make-is_my_mac-check-for-the-current-mesh.patch  0003-batman-adv_do_not_add_TEMP_clients_belonging_to_other_backbone_nodes.patch  0003-batman-adv_remove_references_for_global_tt_entries.patch  0004-batman-adv-Fix-NULL-pointer-dereference-in-DAT-hash-.patch  0004-batman-adv-select-an-internet-gateway-if-none-was-ch.patch  0004-batman-adv_process_broadcast_packets_in_BLA_earlier.patch  0005-batman-adv-check-incoming-packet-type-for-bla.patch  001-bgpd-fix-args-consolidation.patch  001-crash_on_missing_rdir_param.patch  001-extra_cflags.patch  001-fix_ipctl_forwarding.patch  001-makefile-fix.patch  001-quagga_cross.patch  002-fix-metric-output.patch  002-quagga_manet.patch  002-quagga_olsr.patch  003-bgpd-fix-route-map-match-peer-local.patch  004-fix-sockunion-memleaks.patch  (+61 more)
patches-old/: 001-quagga_readline.patch  100-confederation.patch  120-confed_errorhandle.patch  140-holdtimer-set.patch  170-use-supported-pagers.patch
pimbd/: Makefile
poprouting/: Makefile
prince/: Makefile
quagga/: Makefile
routing/: MAINTAINERS
smcroute/: Makefile
sound/mpc/autotools-files/: Makefile.am  config.h.in  configure.ac
sound/mpc/autotools-files/m4/: ax_append_link_flags.m4  check.m4
stunnel/: Makefile
utils/gl-puli-mcu/src/: CMakeLists.txt  gl-puli-mcu.c
utils/rpcd-mod-wireguard/src/: CMakeLists.txt  api.c
vis/: Makefile
(+12634 files in other folders)
